--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,39 +1,30 @@
 <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
         <ul id="marca" class="navbar-nav me-auto mb-2 mb-lg-0">
-        <a id="main" href="#" data-bs-target="#sidebar" data-bs-toggle="collapse" style="margin-top: 5px;"><i class="bi bi-list bi-lg"></i>
+       <a id="main" href="#" data-bs-target="#sidebar" data-bs-toggle="collapse" style="margin-top: 5px;"><i class="bi bi-list bi-lg"></i>
         <img src="../../assets/icon_menu.svg" width="30" height="24"></a>
             <h5>Vila Yara</h5>
         </ul>
         <div id="menu-horizontal" class="collapse navbar-collapse">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 30px; margin-top: 5px;">
-                <a id="navbarText" class="nav-link active" aria-current="page" href="#">INÍCIO</a>
-                <a id="navbarText" routerLink="/pessoas" class="nav-link" href="#">PESSOAS</a>
-                <a id="navbarText" class="nav-link" href="#">GRUPOS</a>
-                <a id="navbarText" class="nav-link" href="#">REUNIÕES</a>
-                <a id="navbarText" class="nav-link" href="#">ATIVIDADES</a>
-                <a id="navbarText" class="nav-link" href="#">TERRITÓRIOS</a>
+            <ul id="menu-horizontal" class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 30px;   ">
+                <li class="nav-item">
+                    <a id="navbarText" class="nav-link active" aria-current="page" href="#">INÍCIO</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a id="navbarText" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">PESSOAS</a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" routerLink="cadastrar">Registrar pessoas</a></li>
+                        <li><a class="dropdown-item" routerLink="/pessoas">Lista de pessoas</a></li>
+                    </ul>
+                </li>
+                    
+                    <a id="navbarText" class="nav-link" href="#">GRUPOS</a>
+                    <a id="navbarText" class="nav-link" href="#">REUNIÕES</a>
+                    <a id="navbarText" class="nav-link" href="#">ATIVIDADES</a>
+                    <a id="navbarText" class="nav-link" href="#">TERRITÓRIOS</a>
+                
+                
+                
             </ul>
         </div>
 </nav>
 
-<div class="container-fluid">
-    <div class="row flex-nowrap">
-        <div class="col-auto px-0">
-            <div id="sidebar" class="collapse collapse-horizontal show border-end">
-                <div id="sidebar-nav" class="list-group border-0 rounded-0 text-sm-start min-vh-100">
-                    <a href="#" id="menus" class="list-group-item border-end-0 d-inline-block text-truncate"
-                        data-bs-parent="#sidebar"><i class="bi bi-bootstrap"></i> <span>PESSOAS</span> </a>
-                    <a href="#" id="menus" class="list-group-item border-end-0 d-inline-block text-truncate"
-                        data-bs-parent="#sidebar"><i class="bi bi-film"></i> <span>GRUPOS</span></a>
-                    <a href="#" id="menus" class="list-group-item border-end-0 d-inline-block text-truncate"
-                        data-bs-parent="#sidebar"><i class="bi bi-heart"></i> <span>REUNIÕES</span></a>
-                    <a href="#" id="menus" class="list-group-item border-end-0 d-inline-block text-truncate"
-                        data-bs-parent="#sidebar"><i class="bi bi-bricks"></i> <span>TERRITÓRIOS</span></a>
-                </div>
-            </div>
-        </div>
-        <main class="col ps-md-2 pt-2">
-            <app-lista-pessoas></app-lista-pessoas>
-        </main>
-    </div>
-</div>
