Filtro de pessoas por grupo e form de cadastro

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,30 +1,28 @@
 <nav id="navbar" class="navbar navbar-expand-lg bg-body-tertiary">
-        <ul id="marca" class="navbar-nav me-auto mb-2 mb-lg-0">
-       <a id="main" href="#" data-bs-target="#sidebar" data-bs-toggle="collapse" style="margin-top: 5px;"><i class="bi bi-list bi-lg"></i>
-        <img src="../../assets/icon_menu.svg" width="30" height="24"></a>
-            <h5>Vila Yara</h5>
-        </ul>
-        <div id="menu-horizontal" class="collapse navbar-collapse">
-            <ul id="menu-horizontal" class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 30px;   ">
-                <li class="nav-item">
-                    <a id="navbarText" class="nav-link active" aria-current="page" href="#">INÍCIO</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a id="navbarText" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">PESSOAS</a>
-                    <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" routerLink="cadastrar">Registrar pessoas</a></li>
-                        <li><a class="dropdown-item" routerLink="/pessoas">Lista de pessoas</a></li>
-                    </ul>
-                </li>
-                    
-                    <a id="navbarText" class="nav-link" href="#">GRUPOS</a>
-                    <a id="navbarText" class="nav-link" href="#">REUNIÕES</a>
-                    <a id="navbarText" class="nav-link" href="#">ATIVIDADES</a>
-                    <a id="navbarText" class="nav-link" href="#">TERRITÓRIOS</a>
-                
-                
-                
-            </ul>
-        </div>
-</nav>
+    <ul id="marca" class="navbar-nav me-auto mb-2 mb-lg-0">
+        <a id="main" href="#" data-bs-target="#sidebar" data-bs-toggle="collapse" style="margin-top: 5px;"><i
+                class="bi bi-list bi-lg"></i>
+            <img src="../../assets/icon_menu.svg" width="30" height="24"></a>
+        <h5>Vila Yara</h5>
+    </ul>
+    <div id="menu-horizontal" class="collapse navbar-collapse">
+        <ul id="menu-horizontal" class="navbar-nav me-auto mb-2 mb-lg-0" style="margin-left: 30px;">
+            <li class="nav-item">
+                <a id="navbarText" class="nav-link active" aria-current="page" routerLink="/home">INÍCIO</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a id="navbarText" class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown">PESSOAS</a>
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" routerLink="/cadastrar">Registrar pessoas</a></li>
+                    <li><a class="dropdown-item" routerLink="/pessoas">Lista de pessoas</a></li>
+                </ul>
+            </li>
 
+            <a id="navbarText" class="nav-link" href="#">GRUPOS</a>
+            <a id="navbarText" class="nav-link" href="#">REUNIÕES</a>
+            <a id="navbarText" class="nav-link" href="#">ATIVIDADES</a>
+            <a id="navbarText" class="nav-link" href="#">TERRITÓRIOS</a>
+
+        </ul>
+    </div>
+</nav>
