--- a/src/app/navbar/navbar.component.scss
+++ b/src/app/navbar/navbar.component.scss
@@ -14,6 +14,10 @@ margin: 0;
 box-sizing: border-box;
 }
 
+#navbarText {
+    color: #e7e6e4;
+}
+
 #nome-aplicacao{
     background-color: #0b69d4;
     color: #e7e6e4;
