--- a/src/app/pessoas/lista-pessoas/lista-pessoas.component.scss
+++ b/src/app/pessoas/lista-pessoas/lista-pessoas.component.scss
@@ -1,3 +1,58 @@
 .table tr {
     text-align: center;
 }
+
+/* Estilos CSS para o modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 999;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.5);
+    transition: all 0.3s ease;
+  }
+  
+  /* Estilos CSS para o modal quando está aberto */
+  .modal.active {
+    display: block;
+  }
+  
+  /* Estilos CSS para o conteúdo do modal */
+  .modal-content {
+    background-color: #f8f9fa;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 100%;
+    max-width: 800px;
+    box-shadow: 0px 0px 10px rgba(0,0,0,0.3);
+  }
+
+  .modal-header {
+    background-color:  rgb(87, 19, 143);
+    color: #fff;
+}
+
+.modal-footer .btn-primary {
+  margin-right: 10px;
+}
+  
+  /* Estilos CSS para o botão fechar */
+  .btn-close {
+    color: #fff;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+  }
+  
+  .btn-close:hover,
+  .btn-close:focus {
+    color: #ccc;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
