adicionando função de editar dados da pessoa

--- a/src/app/pessoas/lista-pessoas/lista-pessoas.component.html
+++ b/src/app/pessoas/lista-pessoas/lista-pessoas.component.html
@@ -57,7 +57,8 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="fecharModal()">Fechar</button>
-        <a [routerLink]="['/editar', pessoaSelecionada.id]" class="btn btn-primary">Editar</a>
+        <button type="button" class="btn btn-primary" (click)="editarPessoa()">Editar</button>
+        <!--<a [routerLink]="['/editar', pessoaSelecionada.id]" class="btn btn-primary">Editar</a>-->
 
       </div>
       
