--- a/src/app/pessoas/cadastro-pessoa/cadastro-pessoa.component.html
+++ b/src/app/pessoas/cadastro-pessoa/cadastro-pessoa.component.html
@@ -3,31 +3,31 @@
     <div class="col-lg-10 col-md-8 col-sm-10">
       <div class="card p-4 shadow-lg">
         <h2 class="mb-4 text-center">Cadastro de Pessoa</h2>
-        <form class="row g-3 needs-validation" novalidate>
+        <form class="row g-3 needs-validation" (ngSubmit)="submitForm()">
           <div class="col-md-3">
             <label for="validationCustom01" class="form-label">Nome</label>
-            <input type="text" class="form-control" id="validationCustom01" required>
+            <input type="text" class="form-control" id="nome" required>
             <div class="valid-feedback">
               Looks good!
             </div>
           </div>
           <div class="col-md-4">
             <label for="validationCustom02" class="form-label">Nome completo</label>
-            <input type="text" class="form-control" id="validationCustom02" required>
+            <input type="text" class="form-control" id="nomeCompleto" required>
             <div class="valid-feedback">
               Looks good!
             </div>
           </div>
           <div class="col-md-4">
             <label for="validationCustom02" class="form-label">Nome família</label>
-            <input type="text" class="form-control" id="validationCustom02" required>
+            <input type="text" class="form-control" id="nomeFamilia" required>
             <div class="valid-feedback">
               Looks good!
             </div>
           </div>
           <div class="col-md-2">
             <label for="validationCustom04" class="form-label">Grupo</label>
-            <select class="form-select" id="validationCustom04" required>
+            <select class="form-select" id="grupo" required>
               <option selected disabled value="">Escolha...</option>
               <option>Vila Yara</option>
               <option>Brecheret</option>
@@ -43,7 +43,7 @@
           </div>
           <div class="col-md-2">
             <label for="validationCustom03" class="form-label">Tipo de publicador</label>
-            <select class="form-select" id="validationCustom04" required>
+            <select class="form-select" id="tipoPublicador" required>
               <option selected disabled value="">Escolha...</option>
               <option>Publicador</option>
               <option>Pioneiro auxiliar</option>
@@ -55,7 +55,7 @@
           </div>
           <div class="col-md-2">
             <label for="validationCustom03" class="form-label">Gênero</label>
-            <select class="form-select" id="validationCustom04" required>
+            <select class="form-select" id="sexo" required>
               <option selected disabled value="">Escolha...</option>
               <option>Feminino</option>
               <option>Masculino</option>
@@ -66,7 +66,7 @@
           </div>
           <div class="col-md-2">
             <label for="validationCustom03" class="form-label">Privilégio</label>
-            <select class="form-select" id="validationCustom04" required>
+            <select class="form-select" id="privilegio" required>
               <option selected disabled value="">Escolha...</option>
               <option>Ancião</option>
               <option>Servo ministerial</option>
@@ -94,14 +94,14 @@
 
           <div class="col-md-2">
             <label for="validationCustom02" class="form-label">Telefone</label>
-            <input type="text" class="form-control" id="validationCustom02" required>
+            <input type="text" class="form-control" id="telefone" required>
             <div class="valid-feedback">
               Looks good!
             </div>
           </div>
           <div class="col-md-6">
             <label for="validationCustom02" class="form-label">Endereço</label>
-            <input type="text" class="form-control" id="validationCustom02" required>
+            <input type="text" class="form-control" id="endereco" required>
             <div class="valid-feedback">
               Looks good!
             </div>
@@ -116,64 +116,7 @@
   </div>
 </div>
 
-<!--<div class="container-fluid">
-  <div class="row justify-content-center mt-5">
-    <div class="col-lg-10 col-md-8 col-sm-10">
-      <div class="card p-4 shadow-lg">
-        <h2 class="mb-4 text-center">Cadastro de Pessoa</h2>
-        <form (ngSubmit)="submitForm()">
-          <div class="form-group">
-            <label for="nome">Nome:</label>
-            <input type="text" class="form-control" id="nome" name="nome" [(ngModel)]="nome">
-          </div>
-          <div class="form-group">
-            <label for="nomeCompleto">Nome Completo:</label>
-            <input type="text" class="form-control" id="nomeCompleto" name="nomeCompleto" [(ngModel)]="nomeCompleto">
-          </div>
-          <div class="form-group">
-            <label for="nomeFamilia">Nome da Família:</label>
-            <input type="text" class="form-control" id="nomeFamilia" name="nomeFamilia" [(ngModel)]="nomeFamilia">
-          </div>
-          <div class="form-group">
-            <label for="grupo">Grupo:</label>
-            <input type="text" class="form-control" id="grupo" name="grupo" [(ngModel)]="grupo">
-          </div>
-          <div class="form-group">
-            <label for="tipoPublicador">Tipo de Publicador:</label>
-            <input type="text" class="form-control" id="tipoPublicador" name="tipoPublicador"
-              [(ngModel)]="tipoPublicador">
-          </div>
-          <div class="form-group">
-            <label for="privilegio">Privilégio:</label>
-            <input type="text" class="form-control" id="privilegio" name="privilegio" [(ngModel)]="privilegio">
-          </div>
-          <div class="form-group">
-            <label for="dataNascimento">Data de Nascimento:</label>
-            <input type="date" class="form-control" id="dataNascimento" name="dataNascimento"
-              [(ngModel)]="dataNascimento">
-          </div>
-          <div class="form-group">
-            <label for="dataBatismo">Data de Batismo:</label>
-            <input type="date" class="form-control" id="dataBatismo" name="dataBatismo" [(ngModel)]="dtBatismo">
-          </div>
-          <div class="form-group">
-            <label for="sexo">Sexo:</label>
-            <select class="form-control" id="sexo" name="sexo" [(ngModel)]="sexo">
-              <option value="M">Masculino</option>
-              <option value="F">Feminino</option>
-            </select>
-          </div>
-          <div class="form-group">
-            <label for="telefone">Telefone:</label>
-            <input type="tel" class="form-control" id="telefone" name="telefone" [(ngModel)]="telefone">
-          </div>
-          <div class="form-group">
-            <label for="endereco">Endereço:</label>
-            <textarea class="form-control" id="endereco" name="endereco" rows="3" [(ngModel)]="endereco"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary">Enviar</button>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.3/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js"></script>
