--- a/src/app/pessoas/cadastro-pessoa/cadastro-pessoa.component.html
+++ b/src/app/pessoas/cadastro-pessoa/cadastro-pessoa.component.html
@@ -1,95 +1,94 @@
 <div class="container mt-3">
   <div class="card">
-    <div class="card-header">
-      <h4>Cadastro de Pessoa</h4>
-    </div>
-    <div class="card-body">
-      <form [formGroup]="pessoaForm" (ngSubmit)="onSubmit()">
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <label>Nome</label>
-              <input type="text" class="form-control" formControlName="nome">       
+    <div class="card p-4 shadow-lg">
+      <h2 class="mb-4 text-center">Cadastro de Pessoa</h2>
+      <div class="card-body">
+        <form [formGroup]="pessoaForm" (ngSubmit)="onSubmit()">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Nome</label>
+                <input type="text" class="form-control" formControlName="nome">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Nome Completo</label>
+                <input type="text" class="form-control" formControlName="nomeCompleto">
+              </div>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="form-group">
-              <label>Nome Completo</label>
-              <input type="text" class="form-control" formControlName="nomeCompleto">
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="form-group">
-              <label>Nome de Família</label>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Nome de Família</label>
                 <input type="text" class="form-control" formControlName="nomeFamilia">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Grupo</label>
+                <input type="text" class="form-control" formControlName="grupo">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Gênero</label>
+                <input type="text" class="form-control" formControlName="sexo">
+              </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="form-group">
-              <label>Grupo</label>
-              <input type="text" class="form-control" formControlName="grupo" placeholder="Grupo">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Privilégio</label>
+                <input type="text" class="form-control" formControlName="privilegio">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Tipo de Publicador</label>
+                <input type="text" class="form-control" formControlName="tipoPublicador">
+              </div>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="form-group">
-              <label>Gênero</label>
-              <input type="text" class="form-control" formControlName="sexo" placeholder="Gênero">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Data de Nascimento</label>
+                <input type="date" class="form-control" formControlName="dtNascimento">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Data de Batismo</label>
+                <input type="date" class="form-control" formControlName="dtBatismo">
+              </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <label>Privilegio</label>
-              <input type="text" class="form-control" formControlName="privilegio" placeholder="Privilegio">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <label>Telefone</label>
+                <input type="tel" class="form-control" formControlName="telefone">
+              </div>
             </div>
           </div>
-          <div class="col-md-6">
-            <div class="form-group">
-              <label>Tipo de Publicador</label>
-              <input type="text" class="form-control" formControlName="tipoPublicador" placeholder="Tipo de Publicador">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <label>Endereço</label>
+                <textarea class="form-control" formControlName="endereco"></textarea>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-md-6">
-            <div class="form-group">
-              <label>Data de Nascimento</label>
-              <input type="date" class="form-control" formControlName="dtNascimento" placeholder="Data de Nascimento">
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div class="form-group">
-              <label>Data de Batismo</label>
-              <input type="date" class="form-control" formControlName="dtBatismo" placeholder="Data de Batismo">
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="form-group">
-              <label>Telefone</label>
-              <input type="tel" class="form-control" formControlName="telefone" placeholder="Telefone">
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="form-group">
-              <label>Endereço</label>
-              <textarea class="form-control" formControlName="endereco" placeholder="Endereço"></textarea>
-            </div>
-          </div>
-        </div>
-        <button type="submit" class="btn btn-primary" [disabled]="!pessoaForm.valid">Salvar</button>
-      </form>
-     
+          <button type="submit" class="btn btn-primary" [disabled]="!pessoaForm.valid">Salvar</button>
+        </form>
+      </div>
+      </div>
     </div>
   </div>
-</div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.3/umd/popper.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.3/umd/popper.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js"></script>
