--- a/src/app/pessoas/lista-pessoas/lista-pessoas.component.html
+++ b/src/app/pessoas/lista-pessoas/lista-pessoas.component.html
@@ -52,27 +52,120 @@
         <p>Gênero: {{pessoaSelecionada.sexo}}</p>
         <p>Telefone: {{pessoaSelecionada.telefone}}</p>
         <p>Endereço: {{pessoaSelecionada.endereco}}</p>
-        
+
         <!-- Adicione aqui mais informações que deseja exibir -->
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" (click)="fecharModal()">Fechar</button>
-        <button type="button" class="btn btn-primary" (click)="editarPessoa()">Editar</button>
+        <button type="button" class="btn btn-primary" (click)="editarPessoa(pessoaSelecionada)">Editar</button>
+        <button type="button" class="btn btn-danger" (click)="delete(pessoaSelecionada)">Excluir</button>
         <!--<a [routerLink]="['/editar', pessoaSelecionada.id]" class="btn btn-primary">Editar</a>-->
 
       </div>
-      
     </div>
   </div>
 </div>
+
+<div class="modal" *ngIf="editarPessoaSelecionada" [ngClass]="{'active': editarPessoaSelecionada}">
+  <div class="container mt-3">
+    <div class="card p-4 shadow-lg">
+      <h2 class="mb-4 text-center">Atualizar dados - {{editarPessoaSelecionada.nome}}</h2>
+      <button type="button" class="btn-close" aria-label="Close" (click)="fecharModal()"></button>
+      <div class="card-body">
+        <form [formGroup]="pessoaForm" (ngSubmit)="onSubmit()">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Nome</label>
+                <input type="text" class="form-control" formControlName="nome" [value]="editarPessoaSelecionada.nome">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Nome Completo</label>
+                <input type="text" class="form-control" formControlName="nomeCompleto" [value]="editarPessoaSelecionada.nomeCompleto">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Nome de Família</label>
+                <input type="text" class="form-control" formControlName="nomeFamilia" [value]="editarPessoaSelecionada.nomeFamilia">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Grupo</label>
+                <input type="text" class="form-control" formControlName="grupo" [value]="editarPessoaSelecionada.grupo">
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="form-group">
+                <label>Gênero</label>
+                <input type="text" class="form-control" formControlName="sexo" [value]="editarPessoaSelecionada.sexo">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Privilégio</label>
+                <input type="text" class="form-control" formControlName="privilegio" [value]="editarPessoaSelecionada.privilegio">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Tipo de Publicador</label>
+                <input type="text" class="form-control" formControlName="tipoPublicador" [value]="editarPessoaSelecionada.tipoPublicador">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Data de Nascimento</label>
+                <input type="text" class="form-control" formControlName="dtNascimento" [value]="editarPessoaSelecionada.dtNascimento">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label>Data de Batismo</label>
+                <input type="text" class="form-control" formControlName="dtBatismo" [value]="editarPessoaSelecionada.dtBatismo">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <label>Telefone</label>
+                <input type="text" class="form-control" formControlName="telefone" [value]="editarPessoaSelecionada.telefone">
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <label>Endereço</label>
+                <textarea class="form-control" formControlName="endereco" [value]="editarPessoaSelecionada.endereco"></textarea>
+              </div>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary" [disabled]="!pessoaForm.valid">Salvar</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
 <script>
   // Seleciona todas as linhas da tabela
   var rows = document.querySelectorAll("table tbody tr");
 
   // Para cada linha da tabela
-  rows.forEach(function(row) {
+  rows.forEach(function (row) {
     // Adiciona um evento de clique
-    row.addEventListener("click", function() {
+    row.addEventListener("click", function () {
       // Seleciona o modal
       var modal = document.querySelector(".modal");
       // Adiciona a classe "active" ao modal
@@ -80,3 +173,7 @@
     });
   });
 </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.3/umd/popper.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.8.2/angular.min.js"></script>
