--- a/src/app/pessoas/lista-pessoas/lista-pessoas.component.html
+++ b/src/app/pessoas/lista-pessoas/lista-pessoas.component.html
@@ -66,7 +66,13 @@
   </div>
 </div>
 
-<div class="modal" *ngIf="editarPessoaSelecionada" [ngClass]="{'active': editarPessoaSelecionada}">
+<ng-template #modalEditar let-modal>
+  <app-editar-pessoa #editarPessoa (editar)="ngOnInit()" [modal]="modal"></app-editar-pessoa>
+</ng-template>
+
+
+
+<!--<div class="modal" *ngIf="editarPessoaSelecionada" [ngClass]="{'active': editarPessoaSelecionada}">
   <div class="container mt-3">
     <div class="card p-4 shadow-lg">
       <h2 class="mb-4 text-center">Atualizar dados - {{editarPessoaSelecionada.nome}}</h2>
@@ -151,12 +157,15 @@
               </div>
             </div>
           </div>
-          <button type="submit" class="btn btn-primary" [disabled]="!pessoaForm.valid">Salvar</button>
+          <div class="modal-footer">
+            <button type="submit" class="btn btn-primary" [disabled]="!pessoaForm.valid">Salvar</button>
+            <button type="button" class="btn btn-secondary" (click)="fecharModal()">Fechar</button>
+          </div>
         </form>
       </div>
     </div>
   </div>
-</div>
+</div>-->
 
 <script>
   // Seleciona todas as linhas da tabela
